cncProd/force-app/main/default/objects/Account_Mapping__c/fields/Account_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Account_Prefix__c</fullName>
    <label>Account Prefix</label>
    <length>5</length>
    <type>Text</type>
</CustomField>