cncProd/force-app/main/default/objects/Account_Mapping__c/fields/Current_Number__c.field-meta.xml
<CustomField>
    <fullName>Current_Number__c</fullName>
    <label>Current Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>