cncProd/force-app/main/default/objects/Account_Mapping__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CITCV</fullName>
            </value>
            <value>
                <fullName>CITPC</fullName>
            </value>
            <value>
                <fullName>KIACV</fullName>
            </value>
            <value>
                <fullName>KIAPC</fullName>
            </value>
            <value>
                <fullName>MaxusCV</fullName>
            </value>
            <value>
                <fullName>MITCV</fullName>
            </value>
            <value>
                <fullName>MITPC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>