cncProd/force-app/main/default/objects/Account_Mapping__c/fields/Source_Code__c.field-meta.xml
<CustomField>
    <fullName>Source_Code__c</fullName>
    <label>Source Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACS</fullName>
            </value>
            <value>
                <fullName>AGA</fullName>
            </value>
            <value>
                <fullName>AGS</fullName>
            </value>
            <value>
                <fullName>ANC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>