cncProd/force-app/main/default/objects/Account_Mapping__c/fields/Vehicle_Franchise__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Franchise__c</fullName>
    <description>Autoline Franchise Code</description>
    <inlineHelpText>Autoline Franchise Code</inlineHelpText>
    <label>Vehicle Franchise</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>J</fullName>
            </value>
            <value>
                <fullName>K</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>Q</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>